<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_remove"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"/>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/remove_first_exam"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingBottom="25dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/checkbox_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/remove_second_exam"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="left"
            android:textColor="@color/black"
            android:paddingBottom="25dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:id="@+id/checkbox_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/remove_third_exam"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="start"
            android:textColor="@color/black"
            android:paddingBottom="25dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:id="@+id/checkbox_3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/remove_fourth_exam"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="start"
            android:textColor="@color/black"
            android:paddingBottom="25dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:id="@+id/checkbox_4"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_button_delete"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:id="@+id/remove_exam_button"/>

</LinearLayout>